Card Text Align Fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -147,6 +147,7 @@ blockquote {
 
 .card {
   background-color: var(--global-card-bg-color);
+  text-align: left;
 
   img {
     width: 100%;
